Change class wording to icon

--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
 
       <div class="menu top">
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Home</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Profile</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Messages</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">History</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Tasks</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Communities</div>
@@ -60,19 +60,19 @@
 
       <div class="menu bottom">
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Settings</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Support</div>
         </div>
         <div class="item-container">
-          <div class="svg">
+          <div class="icon">
             <!-- TODO -->
           </div>
           <div class="item">Privacy</div>
@@ -82,7 +82,9 @@
 
 
     <div class="header">
-      
+      <div class="top-header">
+
+      </div>
     </div>
   </div>
 </body>
