Update search bar, placeholders, header

--- a/index.html
+++ b/index.html
@@ -22,60 +22,60 @@
       <div class="menu top">
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Home -->
           </div>
-          <div class="item">Home</div>
+          <p>Home</div>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Profile -->
           </div>
-          <div class="item">Profile</div>
+          <p>Profile</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Speech Bubble -->
           </div>
-          <div class="item">Messages</div>
+          <p>Messages</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Time -->
           </div>
-          <div class="item">History</div>
+          <p>History</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Tasks -->
           </div>
-          <div class="item">Tasks</div>
+          <p>Tasks</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- People -->
           </div>
-          <div class="item">Communities</div>
+          <p>Communities</p>
         </div>
       </div>
 
       <div class="menu bottom">
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Gear -->
           </div>
-          <div class="item">Settings</div>
+          <p>Settings</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Help -->
           </div>
-          <div class="item">Support</div>
+          <p>Support</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- TODO -->
+            <!-- Shield -->
           </div>
-          <div class="item">Privacy</div>
+          <p>Privacy</p>
         </div>
       </div>
     </div>
@@ -83,7 +83,27 @@
 
     <div class="header">
       <div class="top-header">
-
+        <div class="icon">
+          <!-- Search -->
+        </div>
+        <div class="search-bar"></div>
+        <div class="icon">
+          <!-- Notification Bell -->
+        </div>
+        <div class="avatar"></div>
+        <div class="user-name">Spider-Man</div>
+      </div>
+      <div class="bottom-header">
+        <div class="avatar large"></div>
+        <p>Hi there,</p>
+        <div class="user-name">
+          <p>Spider-Man (@web-slinger)</p>
+        </div>
+        <div class="button-container">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
       </div>
     </div>
   </div>
