--- a/index.html
+++ b/index.html
@@ -16,47 +16,47 @@
         <div class="logo">
           <!-- TODO -->
         </div>
-        <div class="hero">Dashboard</div>
+        <p>Dashboard</p>
       </div>
 
-      <div class="menu top">
-        <div class="item-container">
-          <div class="icon">
-            <!-- Home -->
+        <div class="menu-top">
+          <div class="item-container">
+            <div class="icon">
+              <!-- Home -->
+            </div>
+            <p>Home</p>
           </div>
-          <p>Home</div>
-        </div>
-        <div class="item-container">
-          <div class="icon">
-            <!-- Profile -->
+          <div class="item-container">
+            <div class="icon">
+              <!-- Profile -->
+            </div>
+            <p>Profile</p>
           </div>
-          <p>Profile</p>
-        </div>
-        <div class="item-container">
-          <div class="icon">
-            <!-- Speech Bubble -->
+          <div class="item-container">
+            <div class="icon">
+              <!-- Speech Bubble -->
+            </div>
+            <p>Messages</p>
           </div>
-          <p>Messages</p>
-        </div>
-        <div class="item-container">
-          <div class="icon">
-            <!-- Time -->
+          <div class="item-container">
+            <div class="icon">
+              <!-- Time -->
+            </div>
+            <p>History</p>
           </div>
-          <p>History</p>
-        </div>
-        <div class="item-container">
-          <div class="icon">
-            <!-- Tasks -->
+          <div class="item-container">
+            <div class="icon">
+              <!-- Tasks -->
+            </div>
+            <p>Tasks</p>
           </div>
-          <p>Tasks</p>
-        </div>
-        <div class="item-container">
-          <div class="icon">
-            <!-- People -->
+          <div class="item-container">
+            <div class="icon">
+              <!-- People -->
+            </div>
+            <p>Communities</p>
           </div>
-          <p>Communities</p>
         </div>
-      </div>
 
       <div class="menu bottom">
         <div class="item-container">
@@ -84,7 +84,7 @@
     <div class="header">
       <div class="top-header">
         <div class="icon">
-          <!-- Search -->
+          <svg href="/admin-dashboard/icons/search.svg">
         </div>
         <div class="search-bar"></div>
         <div class="icon">
