--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <title>Admin Dashboard</title>
 </head>
 <body>
@@ -22,37 +24,37 @@
         <div class="menu-top">
           <div class="item-container">
             <div class="icon">
-              <!-- Home -->
+              <ion-icon class="white" name="home"></ion-icon>
             </div>
             <p>Home</p>
           </div>
           <div class="item-container">
             <div class="icon">
-              <!-- Profile -->
+              <ion-icon class="white" name="person-circle"></ion-icon>
             </div>
             <p>Profile</p>
           </div>
           <div class="item-container">
             <div class="icon">
-              <!-- Speech Bubble -->
+              <ion-icon name="chatbubbles"></ion-icon>
             </div>
             <p>Messages</p>
           </div>
           <div class="item-container">
             <div class="icon">
-              <!-- Time -->
+              <ion-icon name="time"></ion-icon>
             </div>
             <p>History</p>
           </div>
           <div class="item-container">
             <div class="icon">
-              <!-- Tasks -->
+              <ion-icon name="list"></ion-icon>
             </div>
             <p>Tasks</p>
           </div>
           <div class="item-container">
             <div class="icon">
-              <!-- People -->
+              <ion-icon name="people"></ion-icon>
             </div>
             <p>Communities</p>
           </div>
@@ -61,19 +63,19 @@
       <div class="menu bottom">
         <div class="item-container">
           <div class="icon">
-            <!-- Gear -->
+            <ion-icon name="settings"></ion-icon>
           </div>
           <p>Settings</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- Help -->
+            <ion-icon name="help"></ion-icon>
           </div>
           <p>Support</p>
         </div>
         <div class="item-container">
           <div class="icon">
-            <!-- Shield -->
+            <ion-icon name="shield-checkmark"></ion-icon>
           </div>
           <p>Privacy</p>
         </div>
@@ -84,7 +86,7 @@
     <div class="header">
       <div class="top-header">
         <div class="icon">
-          <svg href="/admin-dashboard/icons/search.svg">
+          <ion-icon name="search"></ion-icon>
         </div>
         <div class="search-bar"></div>
         <div class="icon">
