Update sidebar in index.html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
 
     <div class="sidebar">
+
       <div class="hero-container">
         <div class="logo">
-          <!-- TODO -->
+          <ion-icon name="golf"></ion-icon>
         </div>
-        <p>Dashboard</p>
+        <p>Pin High</p>
       </div>
+
       <div class="menu-top">
         <div class="item-container">
           <div class="icon">
@@ -57,6 +59,10 @@
           <p>Communities</p>
         </div>
       </div>
+
+      <div class="empty"></div>
+      <div class="empty"></div>
+
       <div class="menu bottom">
         <div class="item-container">
           <div class="icon">
@@ -78,6 +84,7 @@
         </div>
       </div>
     </div>
+
 
     <div class="header">
       <div class="top-header">
