--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
           <div class="icon">
             <ion-icon name="list"></ion-icon>
           </div>
-          <p>Tasks</p>
+          <p>Gear</p>
         </div>
         <div class="item-container">
           <div class="icon">
             <ion-icon name="people"></ion-icon>
           </div>
-          <p>Communities</p>
+          <p>Leaderboards</p>
         </div>
       </div>
 
@@ -91,15 +91,20 @@
         <div class="icon">
           <ion-icon name="search"></ion-icon>
         </div>
-        <div class="search-bar"></div>
-        <div class="icon">
-          <!-- Notification Bell -->
+        <div class="search-bar">
         </div>
-        <div class="avatar"></div>
+        <div class="icon">
+          <ion-icon name="notifications-outline"></ion-icon>
+        </div>
+        <div class="avatar">
+          <img src="./images/avatar1.png" alt="avatar" style="height: 48px;">
+        </div>
         <div class="user-name">Spider-Man</div>
       </div>
       <div class="bottom-header">
-        <div class="avatar large"></div>
+        <div class="avatar large">
+          <img src="./images/avatar1.png" alt="avatar" style="height: 64px;">
+        </div>
         <p>Hi there,</p>
         <div class="user-name">
           <p>Spider-Man (@web-slinger)</p>
@@ -109,6 +114,39 @@
           <button>Upload</button>
           <button>Share</button>
         </div>
+      </div>
+    </div>
+
+
+    <div class="main-content">
+
+      <div class="courses">
+        <div class="card">
+          <p>Kiawah</p>
+        </div>
+        <div class="card">
+          <p>TPC Sawgrass</p>
+        </div>
+        <div class="card">
+          <p>Stonebriar</p>
+        </div>
+        <div class="card">
+          <p>Whistling Straits</p>
+        </div>
+        <div class="card">
+          <p>Pebble Beach</p>
+        </div>
+        <div class="card">
+          <p>Another Course</p>
+        </div>
+      </div>
+
+      <div class="announcements">
+        <!-- TODO -->
+      </div>
+
+      <div class="trending">
+        <!-- TODO -->
       </div>
     </div>
   </div>
