Update upper header CSS and HTML

--- a/index.html
+++ b/index.html
@@ -87,20 +87,25 @@
 
 
     <div class="header">
+
       <div class="top-header">
-        <div class="icon">
-          <ion-icon name="search"></ion-icon>
+        <div class="top-header-left">
+          <div class="icon">
+            <ion-icon name="search"></ion-icon>
+          </div>
+          <div class="search-bar"></div>
         </div>
-        <div class="search-bar">
+        <div class="top-header-right">
+          <div class="icon">
+            <ion-icon name="notifications-outline"></ion-icon>
+          </div>
+          <div class="avatar">
+            <img src="./images/avatar1.png" alt="avatar" style="height: 48px;">
+          </div>
+          <div class="user-name">Spider-Man</div>
         </div>
-        <div class="icon">
-          <ion-icon name="notifications-outline"></ion-icon>
-        </div>
-        <div class="avatar">
-          <img src="./images/avatar1.png" alt="avatar" style="height: 48px;">
-        </div>
-        <div class="user-name">Spider-Man</div>
       </div>
+
       <div class="bottom-header">
         <div class="avatar large">
           <img src="./images/avatar1.png" alt="avatar" style="height: 64px;">
