--- a/index.html
+++ b/index.html
@@ -107,12 +107,16 @@
       </div>
 
       <div class="bottom-header">
-        <div class="avatar large">
-          <img src="./images/avatar1.png" alt="avatar" style="height: 64px;">
-        </div>
-        <p>Hi there,</p>
-        <div class="user-name">
-          <p>Spider-Man (@web-slinger)</p>
+        <div class="welcome">
+          <div class="avatar large">
+            <img src="./images/avatar1.png" alt="avatar" style="height: 64px;">
+          </div>
+          <div class="user-greeting">
+            <p>Hi there,</p>
+            <div class="user-name">
+              <p>Spider-Man (@webslinger)</p>
+            </div>
+          </div>
         </div>
         <div class="button-container">
           <button>New</button>
