--- a/index.html
+++ b/index.html
@@ -130,23 +130,24 @@
     <div class="main-content">
 
       <div class="courses">
-        <div class="card">
+        <p class="courses-text">World-class courses, world-class tee times.</p>
+        <div class="card" id="kiawah">
           <p>Kiawah</p>
         </div>
-        <div class="card">
-          <p>TPC Sawgrass</p>
+        <div class="card" id="crystal-downs">
+          <p>Crystal Downs</p>
         </div>
-        <div class="card">
-          <p>Stonebriar</p>
+        <div class="card" id="pine-valley">
+          <p>Pine Valley</p>
         </div>
-        <div class="card">
-          <p>Whistling Straits</p>
+        <div class="card" id="augusta">
+          <p>Augusta</p>
         </div>
-        <div class="card">
+        <div class="card" id="pebble-beach">
           <p>Pebble Beach</p>
         </div>
-        <div class="card">
-          <p>Another Course</p>
+        <div class="card" id="cypress-point">
+          <p>Cypress Point</p>
         </div>
       </div>
 
