--- a/index.html
+++ b/index.html
@@ -152,7 +152,21 @@
       </div>
 
       <div class="announcements">
-        <!-- TODO -->
+        <p class="announcements-text">Announcements</p>
+        <div class="ann-container">
+          <div class="announcement">
+            <p>Site Maintenance</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquam quidem earum, impedit in non voluptatum natus voluptate facere ullam amet tempore.</p>
+          </div>
+          <div class="announcement">
+            <p>Another Headline</p>
+            <p>Beatae numquam amet modi saepe, hic ipsum nihil quia eius, nobis voluptates aut maiores delectus, tenetur ipsam atque accusantium. Consectetur.</p>
+          </div>
+          <div class="announcement">
+            <p>Yet Another Headline</p>
+            <p>Deleniti fugiat sed, aperiam repudiandae quo ducimus nihil vel libero obcaecati, facere culpa nesciunt maiores assumenda mollitia perspiciatis ipsa aliquid numquam nam.</p>
+          </div>
+        </div>
       </div>
 
       <div class="trending">
