Update style.css for announcements section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="main-content">
 
       <div class="courses">
-        <p class="courses-text">World-class courses, world-class tee times.</p>
+        <p class="section-text">World-class courses, world-class tee times.</p>
         <div class="card" id="kiawah">
           <p>Kiawah</p>
         </div>
@@ -152,12 +152,13 @@
       </div>
 
       <div class="announcements">
-        <p class="announcements-text">Announcements</p>
+        <p class="section-text">Announcements</p>
         <div class="ann-container">
           <div class="announcement">
             <p>Site Maintenance</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquam quidem earum, impedit in non voluptatum natus voluptate facere ullam amet tempore.</p>
           </div>
+          <br>
           <div class="announcement">
             <p>Another Headline</p>
             <p>Beatae numquam amet modi saepe, hic ipsum nihil quia eius, nobis voluptates aut maiores delectus, tenetur ipsam atque accusantium. Consectetur.</p>
