Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
 
 
     <div class="main-content">
+      <h1 class="section-text">World-class courses, world-class tee times.</h1>      
+      <h1 class="section-text">Announcements</h1>
 
       <div class="courses">
-        <p class="section-text">World-class courses, world-class tee times.</p>
         <div class="card" id="kiawah">
           <p>Kiawah</p>
         </div>
@@ -152,13 +153,11 @@
       </div>
 
       <div class="announcements">
-        <p class="section-text">Announcements</p>
         <div class="ann-container">
           <div class="announcement">
             <p>Site Maintenance</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquam quidem earum, impedit in non voluptatum natus voluptate facere ullam amet tempore.</p>
           </div>
-          <br>
           <div class="announcement">
             <p>Another Headline</p>
             <p>Beatae numquam amet modi saepe, hic ipsum nihil quia eius, nobis voluptates aut maiores delectus, tenetur ipsam atque accusantium. Consectetur.</p>
@@ -170,8 +169,36 @@
         </div>
       </div>
 
+      <h1 class="section-text">Trending</h1>
       <div class="trending">
-        <!-- TODO -->
+        <div class="trending-item">
+          <img src="" alt="">
+          <div class="trending-text">
+            <p class="tag">@tiger</p>
+            <p class="info">Tiger Woods</p>
+          </div>
+        </div>
+        <div class="trending-item">
+          <img src="" alt="">
+          <div class="trending-text">
+            <p class="tag">@luckotheirish</p>
+            <p class="info">Rory McIlroy</p>
+          </div>
+        </div>
+        <div class="trending-item">
+          <img src="" alt="">
+          <div class="trending-text">
+            <p class="tag">@scottEZ</p>
+            <p class="info">Scottie Scheffler</p>
+          </div>
+        </div>
+        <div class="trending-item">
+          <img src="" alt="">
+          <div class="trending-text">
+            <p class="tag">@bigjay</p>
+            <p class="info">Justin Thomas</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
