Update style.css and index.html

--- a/index.html
+++ b/index.html
@@ -171,35 +171,37 @@
 
       <h1 class="section-text">Trending</h1>
       <div class="trending">
-        <div class="trending-item">
-          <img src="" alt="">
-          <div class="trending-text">
-            <p class="tag">@tiger</p>
-            <p class="info">Tiger Woods</p>
+        <div class="trending-sub">
+          <div class="trending-item">
+            <img class="golfer" id="tiger" src="./images/tiger.webp" alt="Tiger Woods">
+            <div class="trending-text">
+              <p class="tag">@tiger</p>
+              <p class="info">Tiger Woods</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-item">
-          <img src="" alt="">
-          <div class="trending-text">
-            <p class="tag">@luckotheirish</p>
-            <p class="info">Rory McIlroy</p>
+          <div class="trending-item">
+            <img class="golfer" id="rory" src="./images/rory.jpg" alt="Rory McIlroy">
+            <div class="trending-text">
+              <p class="tag">@luckotheirish</p>
+              <p class="info">Rory McIlroy</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-item">
-          <img src="" alt="">
-          <div class="trending-text">
-            <p class="tag">@scottEZ</p>
-            <p class="info">Scottie Scheffler</p>
+          <div class="trending-item">
+            <img class="golfer" id="scottie" src="./images/scottie.jpeg" alt="Scottie Scheffler">
+            <div class="trending-text">
+              <p class="tag">@scottEZ</p>
+              <p class="info">Scottie Scheffler</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-item">
-          <img src="" alt="">
-          <div class="trending-text">
-            <p class="tag">@bigjay</p>
-            <p class="info">Justin Thomas</p>
+          <div class="trending-item">
+            <img class="golfer" id="jt" src="./images/jt.jpeg" alt="Justin Thomas">
+            <div class="trending-text">
+              <p class="tag">@bigjay</p>
+              <p class="info">Justin Thomas</p>
+            </div>
           </div>
+                </div>
         </div>
-      </div>
     </div>
   </div>
 </body>
