Finished, need to work on grid, sizing, positioning

--- a/index.html
+++ b/index.html
@@ -152,57 +152,58 @@
         </div>
       </div>
 
-      <div class="announcements">
-        <div class="ann-container">
-          <div class="announcement">
-            <p>Site Maintenance</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquam quidem earum, impedit in non voluptatum natus voluptate facere ullam amet tempore.</p>
-          </div>
-          <div class="announcement">
-            <p>Another Headline</p>
-            <p>Beatae numquam amet modi saepe, hic ipsum nihil quia eius, nobis voluptates aut maiores delectus, tenetur ipsam atque accusantium. Consectetur.</p>
-          </div>
-          <div class="announcement">
-            <p>Yet Another Headline</p>
-            <p>Deleniti fugiat sed, aperiam repudiandae quo ducimus nihil vel libero obcaecati, facere culpa nesciunt maiores assumenda mollitia perspiciatis ipsa aliquid numquam nam.</p>
+      <div class="mc-right">
+        <div class="announcements">
+          <div class="ann-container">
+            <div class="announcement">
+              <p>Site Maintenance</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquam quidem earum, impedit in non voluptatum natus voluptate facere ullam amet tempore.</p>
+            </div>
+            <div class="announcement">
+              <p>Another Headline</p>
+              <p>Beatae numquam amet modi saepe, hic ipsum nihil quia eius, nobis voluptates aut maiores delectus, tenetur ipsam atque accusantium. Consectetur.</p>
+            </div>
+            <div class="announcement">
+              <p>Yet Another Headline</p>
+              <p>Deleniti fugiat sed, aperiam repudiandae quo ducimus nihil vel libero obcaecati, facere culpa nesciunt maiores assumenda mollitia perspiciatis ipsa aliquid numquam nam.</p>
+            </div>
           </div>
         </div>
+        <h1 class="section-text">Trending</h1>
+        <div class="trending">
+          <div class="trending-sub">
+            <div class="trending-item">
+              <img class="golfer" id="tiger" src="./images/tiger.webp" alt="Tiger Woods">
+              <div class="trending-text">
+                <p class="tag">@tiger</p>
+                <p class="info">Tiger Woods</p>
+              </div>
+            </div>
+            <div class="trending-item">
+              <img class="golfer" id="rory" src="./images/rory.jpg" alt="Rory McIlroy">
+              <div class="trending-text">
+                <p class="tag">@luckotheirish</p>
+                <p class="info">Rory McIlroy</p>
+              </div>
+            </div>
+            <div class="trending-item">
+              <img class="golfer" id="scottie" src="./images/scottie.jpeg" alt="Scottie Scheffler">
+              <div class="trending-text">
+                <p class="tag">@scottEZ</p>
+                <p class="info">Scottie Scheffler</p>
+              </div>
+            </div>
+            <div class="trending-item">
+              <img class="golfer" id="jt" src="./images/jt.jpeg" alt="Justin Thomas">
+              <div class="trending-text">
+                <p class="tag">@bigjay</p>
+                <p class="info">Justin Thomas</p>
+              </div>
+            </div>
+          </div>
+        </div>
+            </div>
       </div>
-
-      <h1 class="section-text">Trending</h1>
-      <div class="trending">
-        <div class="trending-sub">
-          <div class="trending-item">
-            <img class="golfer" id="tiger" src="./images/tiger.webp" alt="Tiger Woods">
-            <div class="trending-text">
-              <p class="tag">@tiger</p>
-              <p class="info">Tiger Woods</p>
-            </div>
-          </div>
-          <div class="trending-item">
-            <img class="golfer" id="rory" src="./images/rory.jpg" alt="Rory McIlroy">
-            <div class="trending-text">
-              <p class="tag">@luckotheirish</p>
-              <p class="info">Rory McIlroy</p>
-            </div>
-          </div>
-          <div class="trending-item">
-            <img class="golfer" id="scottie" src="./images/scottie.jpeg" alt="Scottie Scheffler">
-            <div class="trending-text">
-              <p class="tag">@scottEZ</p>
-              <p class="info">Scottie Scheffler</p>
-            </div>
-          </div>
-          <div class="trending-item">
-            <img class="golfer" id="jt" src="./images/jt.jpeg" alt="Justin Thomas">
-            <div class="trending-text">
-              <p class="tag">@bigjay</p>
-              <p class="info">Justin Thomas</p>
-            </div>
-          </div>
-                </div>
-        </div>
-    </div>
   </div>
 </body>
 </html>
